<resources>
    <string name="app_name">RenterApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t1">Name</string>
    <string name="textView2">PlotNo and State</string>
    <string name="textView3">Phone</string>
    <string name="textView4">Email-id</string>
    <string name="button">Show Owners</string>
    <string name="t2">Owners Image</string>
    <string name="t3">Search</string>
    <string name="tv_1_">Username</string>
    <string name="tv_2_">Password</string>
    <string name="tv_3_"><a href="www.google.com">About</a></string>
    <string name="tv_4_">Login</string>
    <string name="tv_5_">RentersSignUp</string>
    <string name="tv_6_">OwnerSignUp</string>
    <string name="tv_7_">Email-id</string>
    <string name="tv_8_">PhoneNo</string>
    <string name="tv_9_">Address</string>
    <string name="tv_10_">State</string>
    <string name="tv_11_">Zip</string>
    <string name="tv_12_">Submit</string>
    <string name="tv_13_">Date</string>
    <string name="tv_14_">Paid</string>
    <string name="tv_15_">Repair</string>
    <string name="bt">Search Owner ID</string>
    <string name="Usersearch">Search Owner Id</string>
    <string name="search_hint">Search Owner Name</string>
    <string name="lived">Owners You Lived With</string>
</resources>